# esp32-alarm-pro

./: .gitignore  0001-mcp23017.patch  0001-outputs.patch  0001-patch_i2cbus.patch  fix-idf53.patch  fix_eth53_min.sh  fix_eth_netif.sh  fix_idf53.sh  nvs_dump.csv  nvs_dump_all.sh  replacements.txt  sdkconfig.defaults  sync-remotes.sh  sync-simple.sh  sync-to-main.sh
main/: CMakeLists.txt  Kconfig.projbuild  alarm_core.c  alarm_core.c.bkp  alarm_core.h  app_mqtt.h  app_mqtt.h.bkp  audit_log.c  audit_log.h  auth.c  auth.h  can_bus_protocol.h  can_master.c  can_master.h  config.h  device_identity.c  device_identity.h  ethernet.c  ethernet.h  gpio_inputs.c  gpio_inputs.h  main.c  main.c.bak.1756551111  main.c.bkp  mcp23017.c  mcp23017.h  mdns_service.c  mdns_service.h  mqtt_client.c  mqtt_client.c.bak.1756549668  netmon.c.bak.1756549668  onewire_ds18b20.c  outputs.c  outputs.h  pdo.c  pins.h  pn532_spi.c  pn532_spi.h  roster.c  roster.h  (+13 more)
spiffs/: admin.html  index.html  login.html  script.js  style.css  wizard.html
spiffs/css/: style.css
spiffs/js/: admin.js  app.js  script.js
tools/: publish_canbus.sh
web/: index.html  script.js  style.css
web/js/: api.js  app.js
